# OpEval

./: .gitignore  CMakeLists.txt  README.md
Scripts/: generate_v1.py  generate_v2.py  generate_v3.py
Sources/: common.h  evaluate_stub01.c  evaluate_stub01.h  main.c  tree.c  tree.h
